samll fixes: scrollbars, musicbrainz mirror, cozybar controls, wikipedia link.

--- a/styles/app.css
+++ b/styles/app.css
@@ -26,7 +26,10 @@ body {
   background: white;
   font-family: helvetica, arial;
   margin: 0px;
-  /*height: 100%;*/
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .splash {
@@ -51,13 +54,15 @@ body {
 
 [role="application"] {
   width: 100vw;
-  height: 100vh;
+  /*! height: 100%; */
   /*! position: relative; */
 
   display: -webkit-flex;
 	display: flex;
 	-webkit-flex-direction: row;
 	flex-direction: row;
+  flex: auto;
+  overflow: auto;
 }
 
 .message {
@@ -217,14 +222,14 @@ body {
   width:100%;
 }
 
-nav {
+[role="application"] nav {
   height: 44px;
   background: #333333;
   width: 100%;
   position: relative;
 }
 
-nav button {
+[role="application"] nav button {
   position: absolute;
   left: 12px;
   top: 16px;
@@ -236,7 +241,7 @@ nav button {
   cursor: pointer;
 }
 
-nav h1 {
+[role="application"] nav h1 {
   margin: 0;
   color: white;
   font-size: 16px;
@@ -392,6 +397,11 @@ ul.movielibrary .movieitem .placeholder h3 {
   color: #D6D6D6;
 }
 
+.details .movieabout .synopsis {
+  text-decoration: none;
+  color: white;
+}
+
 .details hr {
   margin: 20px 0;
   position: relative;
@@ -494,18 +504,18 @@ ul.movielibrary .movieitem .placeholder h3 {
 }
 
 @media(min-width: 1201px) {
-  nav {
+  [role=application] nav {
     display: none;
   }
 }
 
 @media(max-width: 1200px) and (min-width: 992px) {
-  nav {
+  [role=application] nav {
     display: none;
   }
 }
 @media(max-width: 991px) and (min-width: 768px) {
-  nav {
+  [role="application"] nav {
     display: none;
   }
   .details {
@@ -537,11 +547,12 @@ ul.movielibrary .movieitem .placeholder h3 {
     top: 0px;
     left:0px;
     font-size: 13px;
+    z-index: 1000;
   }
 
   .details > div {
     width: 100vw;
-    height: 100wh;
+    height: 100vh;
   }
 
   .details .poster {
